// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/Language displays menu on click 1`] = `
<div>
  <div
    className="makeStyles-selected"
    onClick={[Function]}
    role="button"
  >
    <svg
      data-file-name="SvgIconLanguage"
    />
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      en
    </p>
  </div>
  <div
    anchorEl="button"
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    getContentAnchorEl={null}
    id="menu"
    keepMounted={true}
    onClose={[Function]}
    open={true}
    transformOrigin={
      Object {
        "horizontal": "center",
        "vertical": "top",
      }
    }
  >
    <div>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        href="/app/home?key=val"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        zh
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`screen: Nav/Language it renders 1`] = `
<div>
  <div
    className="makeStyles-selected"
    onClick={[Function]}
    role="button"
  >
    <svg
      data-file-name="SvgIconLanguage"
    />
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      en
    </p>
  </div>
  <div
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    getContentAnchorEl={null}
    id="menu"
    keepMounted={true}
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "center",
        "vertical": "top",
      }
    }
  >
    <div>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        href="/app/home?key=val"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        zh
      </a>
    </div>
  </div>
</div>
`;
